--- a/WebProjectProject/Views/Category/Delete.cshtml
+++ b/WebProjectProject/Views/Category/Delete.cshtml
@@ -1,21 +1,34 @@
 ﻿@model Category
 
+@* The hidden id field is so the form will submit the id, shouldn't need this if name is 'id' but any other name will need it
+   If not, id will be 0 and so when updating the database, it will treat this as a new entry
+   The input fields are disabled so no changes can be made
+*@
+
 <form method="post">
+    @* Hidden input field for the category ID *@
     <input asp-for="Id" hidden />
+
+    @* Container for the category delete form *@
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">Delete Category</h2>
             <hr />
         </div>
-        @*<div asp-validation-summary="ModelOnly"></div>*@
+
+        @* Input field for category name (disabled) *@
         <div class="mb-3 row p1">
             <label asp-for="Name"></label>
             <input asp-for="Name" disabled class="form-control" />
         </div>
+
+        @* Input field for display order (disabled) *@
         <div class="mb-3 row p-1">
             <label asp-for="DisplayOrder"></label>
             <input asp-for="DisplayOrder" disabled class="form-control" />
         </div>
+
+        @* Buttons for form submission and navigation *@
         <div class="row">
             <div class="col-6 col-md-4">
                 <button type="submit" class="btn btn-danger form-control">Delete</button>
@@ -28,3 +41,5 @@
         </div>
     </div>
 </form>
+
+@* No validation needed for delete action *@
