--- a/WebProjectProject/Views/Category/Create.cshtml
+++ b/WebProjectProject/Views/Category/Create.cshtml
@@ -1,23 +1,34 @@
 ﻿@model Category
 
+@* The method attribute specifies that the form will use HTTP POST when submitted
+   The action attribute being omitted means the action executed will be the HTTP action linked to this view (i.e. Create)
+*@
 <form method="post">
+    @* Container for the category creation form *@
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">Create Category</h2>
             <hr/>
         </div>
-        @*<div asp-validation-summary="ModelOnly"></div>*@
-        <div class="mb-3 row p1">
+        @*Creates a row for the name input field of the form. The asp-for links the label and input to the Name property of the Category model
+          Using the [DisplayName("")] tag in the model file will change the label displayed. The validation tag will validate the input
+          via the validation tags used in the model file as well.
+        *@
+        <div class="mb-3 row p-1">
             <label asp-for="Name"></label>
             <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
+        @* Input field for display order *@
         <div class="mb-3 row p-1">
             <label asp-for="DisplayOrder"></label>
             <input asp-for="DisplayOrder" class="form-control" />
             <span asp-validation-for="DisplayOrder" class="text-danger"></span>
         </div>
         <div class="row">
+            @* Creates 2 buttons, the first for form submission via the Create HTTP action, the 2nd for executing the
+               Index action
+            *@
             <div class="col-6 col-md-4">
                 <button type="submit" class="btn btn-primary form-control">Create</button>
             </div>
@@ -32,6 +43,7 @@
 
 @section Scripts{
     @{
+        // Include validation scripts
         <partial name="_ValidationScriptsPartial"/>
     }
 }
