--- a/WebProjectProject/Views/Category/Index.cshtml
+++ b/WebProjectProject/Views/Category/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model List<Category> 
 <div class="container">
+@* class "row" creates a bootstap grid, the class "col-6" means the div covers 6 columns out of the 12 given in a bootstrap grid
+   pt is padding top, pb is padding bottom
+*@
         <div class="row pt-4 pb-3">
             <div class="col-6">
                 <h2 class="text-primary">
@@ -7,13 +10,16 @@
                 </h2>
             </div>
             <div class="col-6 text-end">
+                @* Creates a button that once pressed, links to the action Create in the Category controller *@
                 <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> Create New Category
                 </a>
             </div>
         </div>
 
+@* Table to display a list of categories *@
 <table class="table table-bordered table-striped">
+    @* Table header with column names *@
     <thead>
     <tr>
         <th>
@@ -26,15 +32,22 @@
     </tr>
     </thead>
     <tbody>
+        @* Iterate over each category in the model and display its name and display name *@
         @foreach(var obj in Model.OrderBy(u => u.DisplayOrder)) 
         {
+            @* Table row for each category *@
             <tr>
+                @* Display category name *@
                 <td>@obj.Name</td>
+                @* Display category display order *@
                 <td>
                     @obj.DisplayOrder
                 </td>
+                @* Column for Edit and Delete buttons *@
                 <td>
+                    @* Button group for Edit and Delete buttons *@
                     <div class="w-75 btn-group" role="group">
+                        @* Creates 2 buttons for the Category controller actions Edit and Delete *@
                         <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                             <i class="bi bi-pencil-square"></i> Edit
                         </a>
