--- a/WebProjectProject/Views/Shared/_Layout.cshtml
+++ b/WebProjectProject/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebProjectProject.styles.css" asp-append-version="true" />
+    @*Adding bootstap icons and toastr notifications*@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
 
@@ -38,6 +39,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            @*Adding the toastr notifications via the _Notification.cshtml partial view*@
             <partial name="_Notification" />
             @RenderBody()
         </main>
