--- a/WebProjectProject/Views/Shared/_Notification.cshtml
+++ b/WebProjectProject/Views/Shared/_Notification.cshtml
@@ -1,4 +1,5 @@
-﻿@if (TempData["success"] != null)
+﻿@*Adding notifications based on the tempdata created*@
+@if (TempData["success"] != null)
 {
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
