--- a/WebProjectProject/Views/Category/Edit.cshtml
+++ b/WebProjectProject/Views/Category/Edit.cshtml
@@ -5,44 +5,55 @@
    As the edit action return View() has a Category object as a parameter, the form will automatically fill in previous info
 *@
 
-<form method="post">
-    @* Hidden input field for the category ID *@
-    <input asp-for="Id" hidden />
-
-    @* Container for the category edit form *@
-    <div class="border p-3 mt-4">
-        <div class="row pb-2">
-            <h2 class="text-primary">Edit Category</h2>
-            <hr />
-        </div>
-
-        @* Input field for category name *@
-        <div class="mb-3 row p1">
-            <label asp-for="Name"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
-
-        @* Input field for display order *@
-        <div class="mb-3 row p-1">
-            <label asp-for="DisplayOrder"></label>
-            <input asp-for="DisplayOrder" class="form-control" />
-            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
-        </div>
-
-        @* Buttons for form submission and navigation *@
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
-            <div class="col-6 col-md-4">
-                <button type="submit" class="btn btn-primary form-control">Update</button>
-            </div>
-            <div class="col-6 col-md-4">
-                <a asp-controller="Category" asp-action="Index" class="btn btn-outline-secondary border form-control">
-                    Back to List
-                </a>
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">Create Category</h2>
             </div>
         </div>
     </div>
-</form>
+    <div class="card-body p-4">
+        <form method="post">
+            @* Hidden input field for the category ID *@
+            <input asp-for="Id" hidden />
+
+            @* Container for the category edit form *@
+            <div class="border p-3 mt-4">
+                <div class="row pb-2">
+                    <h2 class="text-primary">Edit Category</h2>
+                    <hr />
+                </div>
+
+                @* Input field for category name *@
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="Name" class="form-control border-0 shadow" />
+                    <label asp-for="Name" class="ms-2"></label>
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+
+                @* Input field for display order *@
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="DisplayOrder" class="form-control border-0 shadow" />
+                    <label asp-for="DisplayOrder" class="ms-2"></label>
+                    <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+                </div>
+
+                @* Buttons for form submission and navigation *@
+                <div class="row mt-3">
+                    <div class="col-6 col-md-4">
+                        <button type="submit" class="btn btn-primary form-control">Update</button>
+                    </div>
+                    <div class="col-6 col-md-4">
+                        <a asp-controller="Category" asp-action="Index" class="btn btn-outline-secondary border form-control">
+                            Back to List
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 
 @section Scripts{
     @{
