--- a/WebProjectProject/Views/Shared/_Layout.cshtml.css
+++ b/WebProjectProject/Views/Shared/_Layout.cshtml.css
@@ -40,8 +40,9 @@ button.accept-policy {
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
