--- a/WebProjectProject/Views/Category/Delete.cshtml
+++ b/WebProjectProject/Views/Category/Delete.cshtml
@@ -9,7 +9,7 @@
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Create Category</h2>
+                <h2 class="text-white py-2">Delete Category</h2>
             </div>
         </div>
     </div>
@@ -20,11 +20,6 @@
 
             @* Container for the category delete form *@
             <div class="border p-3 mt-4">
-                <div class="row pb-2">
-                    <h2 class="text-primary">Delete Category</h2>
-                    <hr />
-                </div>
-
                 @* Input field for category name (disabled) *@
                 <div class="form-floating py-2 col-12">
                     <input asp-for="Name" disabled class="form-control border-0 shadow" />
