--- a/WebProjectProject/Views/_ViewImports.cshtml
+++ b/WebProjectProject/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using WebProjectProject
-@using WebProjectProject.Models
+﻿@using WebProject
+@using WebProject.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
