--- a/WebProjectProject/Areas/Admin/Views/Product/Index.cshtml
+++ b/WebProjectProject/Areas/Admin/Views/Product/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="col-6">
             </div>
             <div class="col-6 text-end">
-                <a asp-area="Admin" asp-controller="Product" asp-action="Create" 
+                <a asp-area="Admin" asp-controller="Product" asp-action="Upsert" 
                     class="btn btn-primary">
                     <i class="bi bi-plus-circle"></i> Create New Product
                 </a>
@@ -56,11 +56,11 @@
                             @obj.ListPrice
                         </td>
                         <td>
-                            
+                            @obj.Category.Name
                         </td>
                         <td>
                             <div class="w-75 btn-group" role="group">
-                                <a asp-area="Admin" asp-controller="Product" asp-action="Edit" 
+                                <a asp-area="Admin" asp-controller="Product" asp-action="Upsert" 
                                     asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                     <i class="bi bi-pencil-square"></i> Edit
                                 </a>
