--- a/WebProjectProject/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/WebProjectProject/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using WebProject.Areas.Identity
 @using WebProject.Areas.Identity.Pages
+@using WebProject.Models
+@using WebProject.Models.ViewModels
+@using WebProject.Utility;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
