--- a/WebProjectProject/Views/_ViewImports.cshtml
+++ b/WebProjectProject/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using WebProject
 @using WebProject.Models
 @using WebProject.Models.ViewModels
+@using WebProject.Utility;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
